resolved issue with styles covering navbar

--- a/home/styles.css
+++ b/home/styles.css
@@ -55,6 +55,7 @@ p {
 }
 
 .textBtnContainer {
+	z-index: 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
